--- a/Latex Document/Thesis.bib
+++ b/Latex Document/Thesis.bib
@@ -378,3 +378,11 @@
   author={United Nations},
   year={2015}
 }
+
+@online{ibaMDAQ,
+  author = {iba AG},
+  title = {ibaM-DAQ},
+  year = 2023,
+  url = {https://www.iba-ag.com/en/ibam-daq},
+  urldate = {2023-08-29}
+}
