--- a/Latex Document/Thesis.bib
+++ b/Latex Document/Thesis.bib
@@ -386,3 +386,32 @@
   url = {https://www.iba-ag.com/en/ibam-daq},
   urldate = {2023-08-29}
 }
+
+@article{gonzalez2023time,
+  title={Time series modelling of a radial-axial ring rolling system},
+  author={Gonzalez, Oscar Bautista and R{\"o}nnow, Daniel},
+  journal={International Journal of Modelling, Identification and Control},
+  volume={43},
+  number={1},
+  pages={13--25},
+  year={2023},
+  publisher={Inderscience Publishers (IEL)}
+}
+
+@software{MATLAB,
+year = {2022},
+author = {The MathWorks Inc.},
+title = {MATLAB version: 9.13.0 (R2022b)},
+publisher = {The MathWorks Inc.},
+address = {Natick, Massachusetts, United States},
+url = {https://www.mathworks.com}
+}
+
+@software{diagnosticFeatureDesigner,
+year = {2022},
+author = {The MathWorks Inc.},
+title = {Diagnostic Feature Designer (R2022b)},
+publisher = {The MathWorks Inc.},
+address = {Natick, Massachusetts, United States},
+url = {https://www.mathworks.com}
+}
